Changing `82aaff` to `ff4500`

--- a/terminal_themes/kitty-theme.conf
+++ b/terminal_themes/kitty-theme.conf
@@ -5,7 +5,7 @@ color0 #1d3b53
 color1 #fc514e
 color2 #a1cd5e
 color3 #e3d18a
-color4 #82aaff
+color4 #ff4500
 color5 #c792ea
 color6 #7fdbca
 color7 #a1aab8
@@ -13,7 +13,7 @@ color8 #7c8f8f
 color9 #ff5874
 color10 #21c7a8
 color11 #ecc48d
-color12 #82aaff
+color12 #ff4500
 color13 #ae81ff
 color14 #7fdbca
 color15 #d6deeb
