--- a/terminal_themes/alacritty.yml
+++ b/terminal_themes/alacritty.yml
@@ -24,7 +24,7 @@ colors:
     red:     '#fc514e'
     green:   '#a1cd5e'
     yellow:  '#e3d18a'
-    blue:    '#82aaff'
+    blue:    '#ff4500'
     magenta: '#c792ea'
     cyan:    '#7fdbca'
     white:   '#a1aab8'
@@ -35,7 +35,7 @@ colors:
     red:     '#ff5874'
     green:   '#21c7a8'
     yellow:  '#ecc48d'
-    blue:    '#82aaff'
+    blue:    '#ff4500'
     magenta: '#ae81ff'
     cyan:    '#7fdbca'
     white:   '#d6deeb'
