--- a/terminal_themes/windows-terminal-settings.json
+++ b/terminal_themes/windows-terminal-settings.json
@@ -12,7 +12,7 @@
             "red": "#fc514e",
             "green": "#a1cd5e",
             "yellow": "#e3d18a",
-            "blue": "#82aaff",
+            "blue": "#ff4500",
             "purple": "#c792ea",
             "cyan": "#7fdbca",
             "white": "#a1aab8",
@@ -20,7 +20,7 @@
             "brightRed": "#ff5874",
             "brightGreen": "#21c7a8",
             "brightYellow": "#ecc48d",
-            "brightBlue": "#82aaff",
+            "brightBlue": "#ff4500",
             "brightPurple": "#ae81ff",
             "brightCyan": "#7fdbca",
             "brightWhite": "#d6deeb"
